# qlib-studio

./: .gitignore  README.md  README.zh-CN.md  dashboard-snapshot.md  package-lock.json
.playwright-mcp/: page-2026-05-04T11-40-48-044Z.yml  page-2026-05-04T11-40-59-419Z.yml  page-2026-05-04T16-21-05-121Z.yml  page-2026-05-04T16-21-20-947Z.yml  page-2026-05-04T16-22-50-952Z.yml  page-2026-05-04T18-11-53-797Z.yml  page-2026-05-04T18-18-41-508Z.yml
backend/: pyproject.toml  run.py
backend/app/: main.py
backend/app/api/: backtest.py  experiments.py  health.py  jobs.py  qlib_status.py  rdagent.py  settings.py  workflows.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py
backend/app/schemas/: backtest.py  experiments.py  qlib.py  rdagent.py  settings.py  workflows.py
backend/app/services/: backtest_analyzer.py  backtest_artifact_loader.py  experiment_service.py  job_runner.py  mlflow_service.py  path_checker.py  qlib_checker.py  rdagent_checker.py  rdagent_runner.py  secret_sanitizer.py  settings_store.py  template_service.py  workflow_service.py
backend/tests/: test_phase2_workflows.py  test_phase4_backtest.py  test_phase5_rdagent.py
configs/qlib_templates/: workflow_config_lightgbm_Alpha158.yaml  workflow_config_lightgbm_Alpha360.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BacktestAnalyzer.tsx  DataHealth.tsx  DataPathSection.tsx  ExperimentCenter.tsx  (+10 more)
stitch_export/: DESIGN.md  code.html
(+5 files in other folders)
